# email-inbox

./: .env.example  .gitignore  .prettierrc  CLAUDE.md  README.md  biome.json  cli.md  datasets-layout-proposal.md  e2e-gmail-tests.md  evals-plan.md  evals.md  low-level-next-steps.md  other-todos.md  package-lock.json  package.json  test.ts  tsconfig.tsbuildinfo
baml_src/: agent.baml  classifier.baml  codingAgent.baml  htmlToMarkdown.baml  isSpam.baml  promptBits.baml  updateRules.baml  update_rules.baml
hack/: gmail_client.py  pyproject.toml  test.ts
rules/: my-personal-rules.txt  personal-rules.txt
src/: agent.ts  checkWithHuman.ts  cli.ts  codingAgent.ts  contactHuman.ts  datasets-simple.ts  datasets.ts  emailParser.ts  handleEmail.ts  index.ts  parseEmail.ts  rules.txt  state.ts  updateRules.ts
src/hack/: debug-email-parsing.ts  fetch-test-emails.ts
src/test/: codingAgent.test.ts  test-actual-payload.test.ts  test-all-emails.test.ts  test-e2e-email-parsing.ts  test-email-parser.ts  test.ts
src/test/data/: debug-payload.json  email-19747afe51eac149.json  email-19747b059e30ead6.json  email-19747c536da50b82.json  email-19747c83a52865b6.json  email-19747d4add59dc23.json  email-197481392afe5a32.json  email-197483a8646dc3bd.json  email-197483b8a28abd8f.json  email-19748f503ea9e96c.json  email-197490e11eea0484.json  full-script-output.txt  test-message-ids.json
